--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ html, body {
 .wrapper{
     min-height: 100vh;
     color: var(--colorLight2);
-    background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
+    background: linear-gradient(199deg, rgba(2,0,36,1) 0%, rgba(44,44,204,1) 35%, rgba(0,212,255,1) 100%);
+
 }
 
 h1{
